updating swagger and some routes return
